Static files fixes
- style.css had syntax errors
    - it's also too big but that's neither here nor there
- background gradient png was missing

--- a/static/style.css
+++ b/static/style.css
@@ -842,7 +842,7 @@ form.ban-appeal textarea {
   display:inline!important;
 }
 pre {
-  margin:0
+  margin: 0;
   display: inline!important;
 }
 
@@ -1352,7 +1352,7 @@ div.boardlist {
 	float: left;
 }
 #thread-links > a {
-	padding-left: none;
+	padding-left: 0;
 	padding-right: 10px;
 }
 #thread-quick-reply {
@@ -1757,7 +1757,7 @@ aside.search-container .box {
     padding: 2px 0 2px 4px;
     max-width: 100%;
     min-width: 100%;
-    width: 100%:
+    width: 100%;
 }
 #search-loading {
     display: inline-block;
@@ -1878,7 +1878,6 @@ td.board-tags a.tag-link {
 }
 #gallery_images img.active {
   -webkit-box-shadow: 0px 0px 29px 2px rgba(255,255,255,1);
-     -moz-box-shadow: 0px 0px 29px 2px rgba(255,255,255,1);
           box-shadow: 0px 0px 29px 2px rgba(255,255,255,1);
   z-index: 1;
 }
@@ -2055,7 +2054,7 @@ span.orangeQuote {
   flex-grow: 0;
   height: 2em;
   width: 2em;
-  text-align: middle;
+  text-align: center;
   box-sizing: border-box;
   font-size: 1.25em;
 }
